ResolveOperation: do not store URLs in a Set
Signed-off-by: Ferry Huberts <ferry.huberts@pelagic.nl>